preset disp overflow fix

--- a/editor/editor.css
+++ b/editor/editor.css
@@ -38,12 +38,14 @@ body::after {
   display: flex;
   align-items: center;
   flex-grow: 1;
-  justify-content: space-evenly;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 .blockSelectLabel {
   margin-right: 5px;
-  min-width: 100px;
+  min-width: 120px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .blockSelected {
   box-shadow: 0 0 0 4px red;
@@ -60,7 +62,7 @@ body::after {
 .blockEditMenu {
   height: 100%;
   overflow-x: scroll;
-  flex-grow:1;
+  flex-grow: 1;
 }
 .noEditText {
   font-size: 50px;
